// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrowseButton should render correctly 1`] = `
<div
  className="browseContainer"
>
  <button
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Choose Files
  </button>
   
  No files chosen (0KB)
</div>
`;

exports[`BrowseButton should render correctly 2`] = `
<div
  className="browseContainer"
>
   
  No files chosen (0KB)
</div>
`;
